force-app/main/default/objects/Schedule_of_Losses__c/Schedule_of_Losses__c.object-meta.xml
<CustomObject>
    <label>Schedule of Losses</label>
    <nameField>
        <displayFormat>Sched {00000}</displayFormat>
        <label>Schedule of Losses No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule of Losses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>