force-app/main/default/objects/Schedule_of_Losses__c/fields/Accept_Case_New_Arbitration_Date__c.field-meta.xml
<CustomField>
    <fullName>Accept_Case_New_Arbitration_Date__c</fullName>
    <label>Accept Case/New Arbitration Date</label>
    <type>Date</type>
</CustomField>