force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitration_Notification_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Notification_Start_date__c</fullName>
    <formula>if(AND(ISBLANK(Arbitration_Start_Date__c),NOT(ISBLANK(Arbitrator_Accept_Date__c))),
Arbitrator_Accept_Date__c,
if(Arbitrator_Accept_Date__c &gt;= Arbitration_Start_Date__c,Arbitrator_Accept_Date__c,
Arbitration_Start_Date__c))</formula>
    <label>Arbitration Notification Start date</label>
    <type>Date</type>
</CustomField>