force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Start_Date__c</fullName>
    <label>Arbitration Start Date</label>
    <type>Date</type>
</CustomField>