force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitrator_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Accept_Date__c</fullName>
    <formula>Case__r.Arbitration_Accept_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arbitrator Accept Date</label>
    <type>Date</type>
</CustomField>