force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitrator_Invite_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Invite_Date__c</fullName>
    <label>Arbitrator Invite Date</label>
    <type>Date</type>
</CustomField>