force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitrator_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Notification_Date__c</fullName>
    <formula>if(AND(Case__r.Arbitrator_Contact__c != null),
Arbitrator_Notification_No_of_Days__c +  Arbitrator_Invite_Date__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arbitrator Notification - Date</label>
    <type>Date</type>
</CustomField>