force-app/main/default/objects/Schedule_of_Losses__c/fields/Arbitrators_Award_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Arbitrators_Award_Finalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrators Award Finalised</label>
    <type>Checkbox</type>
</CustomField>