force-app/main/default/objects/Schedule_of_Losses__c/fields/Automated_Doc_Prep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Automated_Doc_Prep_Start_Date__c</fullName>
    <formula>if(Unilateral_Length_days__c=0,Unilateral_referral_date__c ,Unilateral_referral_date__c+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated Doc Prep Start Date</label>
    <type>Date</type>
</CustomField>