force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_Extension__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Extension__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bilateral Extension (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>