force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_Prior_Notification_date__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Prior_Notification_date__c</fullName>
    <formula>Bilateral_referral_date__c -  Case__r.Protocol__r.Bilateral_Prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral Prior Notification date</label>
    <type>Date</type>
</CustomField>