force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_Prior_Notification_days__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Prior_Notification_days__c</fullName>
    <formula>Case__r.Protocol__r.Bilateral_Prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral Prior Notification (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>