force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_referral_date__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_referral_date__c</fullName>
    <formula>if(Case__r.Protocol__r.Bilateral_referral_days__c=0,
 No_referral_date__c ,
Case__r.Protocol__r.Bilateral_referral_days__c +   Bilateral_Start_Date__c  +  Bilateral_Extension__c-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral referral (End date)</label>
    <type>Date</type>
</CustomField>