force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_referral_date_passed__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_referral_date_passed__c</fullName>
    <formula>If(
AND(Case__r.Protocol__r.Bilateral_referral_days__c=0,Bilateral_referral_date__c  &lt;= Today()),true,
If(
OR(Bilateral_referral_date__c  &gt;= Today(),ISNULL(Bilateral_referral_date__c ) ),
false,true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral referral date passed</label>
    <type>Checkbox</type>
</CustomField>