force-app/main/default/objects/Schedule_of_Losses__c/fields/Bilateral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Start_Date__c</fullName>
    <formula>Accept_Case_New_Arbitration_Date__c + Case__r.Protocol__r.No_referral_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral Start Date</label>
    <type>Date</type>
</CustomField>