force-app/main/default/objects/Schedule_of_Losses__c/fields/Claimaint_Arbitration_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Claimaint_Arbitration_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimaint Arbitration Submitted</label>
    <type>Checkbox</type>
</CustomField>