force-app/main/default/objects/Schedule_of_Losses__c/fields/Claimant_Accept_Decline__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Accept_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Accept/Decline</label>
    <type>Checkbox</type>
</CustomField>