force-app/main/default/objects/Schedule_of_Losses__c/fields/Claimant_Confirm_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Confirm_Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Confirm Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>