force-app/main/default/objects/Schedule_of_Losses__c/fields/Claimant_Information__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Information</label>
    <referenceTo>Claimant_Information__c</referenceTo>
    <relationshipLabel>Schedule of Losses</relationshipLabel>
    <relationshipName>Schedule_of_Losses</relationshipName>
    <type>Lookup</type>
</CustomField>