force-app/main/default/objects/Schedule_of_Losses__c/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <formula>Claimant_Information__r.Claimant_First_Name__c +&apos; &apos; + Claimant_Information__r.Claimant_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Name</label>
    <type>Text</type>
</CustomField>