force-app/main/default/objects/Schedule_of_Losses__c/fields/Defendant_Accept_Decline__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Accept_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Accept/Decline</label>
    <type>Checkbox</type>
</CustomField>