force-app/main/default/objects/Schedule_of_Losses__c/fields/Defendant_Arbitration_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Arbitration_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Arbitration Submitted</label>
    <type>Checkbox</type>
</CustomField>