force-app/main/default/objects/Schedule_of_Losses__c/fields/Defendant_Confirm_Documents_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Confirm_Documents_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Confirm Documents uploaded</label>
    <type>Checkbox</type>
</CustomField>