force-app/main/default/objects/Schedule_of_Losses__c/fields/Defendant_Final_Offer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Final_Offer_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Final Offer Confirmed</label>
    <type>Checkbox</type>
</CustomField>