force-app/main/default/objects/Schedule_of_Losses__c/fields/Doc_Prep_Date_passed__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Date_passed__c</fullName>
    <formula>If( AND(Case__r.Protocol__r.Doc_Prep_Duration__c =0,Doc_Prep_End_Date__c&lt;=Today()),true,
If(
OR(Doc_Prep_End_Date__c &gt;= Today(),ISNULL(Doc_Prep_End_Date__c) ),false,true))</formula>
    <label>Doc Prep Date passed</label>
    <type>Checkbox</type>
</CustomField>