force-app/main/default/objects/Schedule_of_Losses__c/fields/Doc_Prep_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_End_Date__c</fullName>
    <formula>if(Case__r.Protocol__r.Doc_Prep_Duration__c=0,
Doc_Prep_Start_Date__c + Case__r.Protocol__r.Doc_Prep_Duration__c,
Doc_Prep_Start_Date__c + Case__r.Protocol__r.Doc_Prep_Duration__c-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Prep End Date</label>
    <type>Date</type>
</CustomField>