force-app/main/default/objects/Schedule_of_Losses__c/fields/Doc_Prep_prior_Notification_date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_prior_Notification_date__c</fullName>
    <formula>Doc_Prep_End_Date__c -  Doc_Prep_prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Prep prior Notification (date)</label>
    <type>Date</type>
</CustomField>