force-app/main/default/objects/Schedule_of_Losses__c/fields/Doc_Prep_prior_Notification_days__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_prior_Notification_days__c</fullName>
    <formula>Case__r.Protocol__r.Doc_Prep_prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Prep prior Notification (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>