force-app/main/default/objects/Schedule_of_Losses__c/fields/Doc_Prep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Start_Date__c</fullName>
    <label>Doc Prep Start Date</label>
    <type>Date</type>
</CustomField>