force-app/main/default/objects/Schedule_of_Losses__c/fields/Final_Offer_prior_Notification_date__c.field-meta.xml
<CustomField>
    <fullName>Final_Offer_prior_Notification_date__c</fullName>
    <formula>Final_Offers_End_Date__c -  Final_Offer_prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Offer prior Notification (date)</label>
    <type>Date</type>
</CustomField>