force-app/main/default/objects/Schedule_of_Losses__c/fields/Final_Offers_Date_passed__c.field-meta.xml
<CustomField>
    <fullName>Final_Offers_Date_passed__c</fullName>
    <formula>If(AND(Case__r.Protocol__r.Final_Offers_Duration__c = 0,Final_Offers_End_Date__c&lt;=today()),true,
If(OR(Final_Offers_End_Date__c &gt;= Today(),ISNULL(Final_Offers_End_Date__c)),false,true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Offers Date passed</label>
    <type>Checkbox</type>
</CustomField>