force-app/main/default/objects/Schedule_of_Losses__c/fields/Final_Offers_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Offers_End_Date__c</fullName>
    <formula>if(Case__r.Protocol__r.Final_Offers_Duration__c=0,
Final_Offers_Start_Date__c +  Case__r.Protocol__r.Final_Offers_Duration__c,
Final_Offers_Start_Date__c +  Case__r.Protocol__r.Final_Offers_Duration__c-1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Offers End Date</label>
    <type>Date</type>
</CustomField>