force-app/main/default/objects/Schedule_of_Losses__c/fields/Final_Offers_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Offers_Start_Date__c</fullName>
    <label>Final Offers Start Date</label>
    <type>Date</type>
</CustomField>