force-app/main/default/objects/Schedule_of_Losses__c/fields/Invite_Arbitrator__c.field-meta.xml
<CustomField>
    <fullName>Invite_Arbitrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Arbitrator</label>
    <type>Checkbox</type>
</CustomField>