force-app/main/default/objects/Schedule_of_Losses__c/fields/Market_Maker_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Maker_Notification_Date__c</fullName>
    <formula>Arbitration_Notification_Start_date__c +  Market_Maker_Notification_No_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Maker Notification Date</label>
    <type>Date</type>
</CustomField>