force-app/main/default/objects/Schedule_of_Losses__c/fields/Market_Maker_Notification_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Market_Maker_Notification_No_of_Days__c</fullName>
    <formula>Case__r.Protocol__r.Market_Maker_Notification_No_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Maker Notification No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>