force-app/main/default/objects/Schedule_of_Losses__c/fields/No_referral_date__c.field-meta.xml
<CustomField>
    <fullName>No_referral_date__c</fullName>
    <formula>Accept_Case_New_Arbitration_Date__c  +  Case__r.Protocol__r.No_referral_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No referral (date)</label>
    <type>Date</type>
</CustomField>