force-app/main/default/objects/Schedule_of_Losses__c/fields/No_referral_date_passed__c.field-meta.xml
<CustomField>
    <fullName>No_referral_date_passed__c</fullName>
    <formula>If(OR(No_referral_date__c &gt; Today(),ISNULL(No_referral_date__c) ),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No referral (date) passed</label>
    <type>Checkbox</type>
</CustomField>