force-app/main/default/objects/Schedule_of_Losses__c/fields/No_referral_Length_days__c.field-meta.xml
<CustomField>
    <fullName>No_referral_Length_days__c</fullName>
    <formula>Case__r.Protocol__r.No_referral_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No referral Length (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>