force-app/main/default/objects/Schedule_of_Losses__c/fields/Unilateral_Arbitration_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Unilateral_Arbitration_Overlap__c</fullName>
    <formula>If(AND(Unilateral_referral_date_passed__c=True,Unilateral_referral_date__c&gt;= Doc_Prep_Start_Date__c),True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unilateral Arbitration Overlap</label>
    <type>Checkbox</type>
</CustomField>