force-app/main/default/objects/Schedule_of_Losses__c/fields/Unilateral_Prior_Notification_date__c.field-meta.xml
<CustomField>
    <fullName>Unilateral_Prior_Notification_date__c</fullName>
    <formula>Unilateral_referral_date__c - Case__r.Protocol__r.Unilateral_Prior_Notification_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unilateral Prior Notification date</label>
    <type>Date</type>
</CustomField>