force-app/main/default/objects/Schedule_of_Losses__c/fields/Unilateral_referral_date__c.field-meta.xml
<CustomField>
    <fullName>Unilateral_referral_date__c</fullName>
    <formula>if(Case__r.Protocol__r.Unilateral_referral_days__c=0,
Unilateral_Start_Date__c ,
Unilateral_Start_Date__c    +  Case__r.Protocol__r.Unilateral_referral_days__c-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unilateral referral (End date)</label>
    <type>Date</type>
</CustomField>