force-app/main/default/objects/Schedule_of_Losses__c/fields/Unilateral_referral_date_passed__c.field-meta.xml
<CustomField>
    <fullName>Unilateral_referral_date_passed__c</fullName>
    <formula>If(
AND(
Case__r.Protocol__r.Unilateral_referral_days__c =0,Unilateral_referral_date__c  &lt;= Today()),true,
If(OR(Unilateral_referral_date__c  &gt;= Today(),ISNULL(Unilateral_referral_date__c) ),
false,true))</formula>
    <label>Unilateral referral date passed</label>
    <type>Checkbox</type>
</CustomField>