force-app/main/default/objects/Schedule_of_Losses__c/fields/Unilateral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Unilateral_Start_Date__c</fullName>
    <formula>if(Case__r.Protocol__r.Bilateral_referral_days__c = 0,  No_referral_date__c , Bilateral_referral_date__c + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unilateral Start Date</label>
    <type>Date</type>
</CustomField>